--- a/src/app/Components/book-item/book-item.component.html
+++ b/src/app/Components/book-item/book-item.component.html
@@ -15,7 +15,7 @@
       <p>
         Ksh <span>{{ book.price }}</span>
       </p>
-      <button type="button">Buy now</button>
+      <button type="button" (click)="orderBook()">Buy now</button>
     </div>
   </div>
 </div>
