--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,7 +1,8 @@
 <div class="navbar">
   <div class="container">
     <a href="#" class="logo">{{ title }}</a>
-    <fa-icon [icon]="faShoppingCart" class="shoppingCart"></fa-icon>
+    <!-- <fa-icon [icon]="faShoppingCart" class="shoppingCart"></fa-icon> -->
+    <app-auth-button></app-auth-button>
   </div>
 </div>
 
