--- a/src/app/Components/auth-button/auth-button.component.scss
+++ b/src/app/Components/auth-button/auth-button.component.scss
@@ -1,4 +1,16 @@
 .login {
   color: white;
   background-color: #007af3;
+  border: transparent;
+  font-size: 0.8em;
+  border-radius: 2em;
+  text-transform: uppercase;
+  letter-spacing: 0em;
+  margin-top: 0.4em;
+  // margin: 0 1em 0 1.2em;
+  height: 2.5em;
+  width: 8em;
+  color: #ffffff;
+  cursor: pointer;
+  outline: none;
 }
