--- a/src/app/Components/book-item/book-item.component.html
+++ b/src/app/Components/book-item/book-item.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="book-info">
     <div class="book-text">
-      <h1>{{ book.title }}</h1>
+      <h1>{{ book.booktitle }}</h1>
       <h2>{{ book.author }}</h2>
 
       <p>
