--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,7 @@ body {
   font-family: "Poppins";
   background: #f2f2f2;
 }
+
+.box-shadow {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+}
